fixed text overflow

--- a/css/ourapproach.css
+++ b/css/ourapproach.css
@@ -2,7 +2,7 @@
 
 
 #nav_slide div .nav_content{
-  font-size: 1.2vw;
+  font-size: 1.1vw;
   width: calc(100% - 30px);
   background-color: white;
   min-height: 200px;
